--- a/healpix_reproject_cutout.ipynb
+++ b/healpix_reproject_cutout.ipynb
@@ -83,6 +83,8 @@
     }
    ],
    "source": [
+    "#This is the map that has the right WCS attached to it.\n",
+    "#Note that for an all-sky HealPix map you should have a WCS which matches this, in my case this is a ZEA projection.\n",
     "NHI_map = fits.open(\"NHI_ZEA.fits\")\n",
     "wcs = WCS(NHI_map[0].header).dropaxis(2)\n",
     "NHI_map[0].header = fits.Header.fromstring(wcs.to_header_string())\n",
